# dotfile

./: .aerospace.toml  .alacritty.toml  .devcontainer_env.sh  .gitignore  .hyper.js  .taskrc  .tmux.conf  .xprofile  .zshrc  LazyVimDockerfile  x112wayland-clipboard.sh  zshrc-for-devcontainer
.config/alacritty/: alacritty.toml
.config/copyq/: .gitignore  copyq-commands.ini  copyq.conf  copyq.pub  copyq_geometry.ini
.config/flameshot/: flameshot.ini
.config/ghostty/: config
.config/hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/i3/: config
.config/i3/scripts/: move-cursor-to-border.sh  move-cursor-to-nextzone.sh
.config/i3status/: config
.config/kitty/: kitty.conf
.config/nushell/: config.nu  env.nu  fzf.nu  plugin.msgpackz  plugins.nuon  python-layer.nu
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/lua/config/: keymaps.lua  lazy.lua  options.lua
.config/nvim/lua/plugins/: bufferline.lua  cmp.lua  codecompanion.lua  colorizer.lua  dashboard.lua  firenvim.lua  fzf.lua  lsp.lua  lualine.lua  mason-lspconfig.lua  neo-tree.lua  neopyter.lua  (+7 more)
.config/sway/: config
.config/task/hooks/: on-exit-sync.sh  sync-in.sh  sync-out.sh
.config/tmuxinator/: monitor.yml
.config/waybar/: config  style.css
.config/yazi/: theme.toml
.config/zellij/: config.kdl
.cursor/: cli-config.json
.dev-container/: DevcontainerDockerfile  Makefile  zshrc-for-devcontainer
.dev-container/dev-controller/: Cargo.toml
.dev-container/dev-controller/src/: commands.rs  main.rs
.devcontainer-template/: node.json
.task/hooks/: sync-in.sh  sync-out.sh
(+1 files in other folders)
