[package]
name = "dev-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "unicode"] }
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.116"
serde_yaml = "0.9.34"
toml = "0.8.12"
